--- a/prototype-2/public/index.html
+++ b/prototype-2/public/index.html
@@ -16,6 +16,7 @@
 
 	<script defer src='/build/bundle.js'></script>
 	<script type='module' src='https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall'></script>
+	<script src="http://localhost:8080/socket.io/socket.io.js"></script>
 </head>
 
 <body>
