--- a/prototype-2/public/index.html
+++ b/prototype-2/public/index.html
@@ -80,7 +80,13 @@
 		</div>
 
 		<div class="page" id="pid_vote">
-
+			<img id="eid_vote_img" src=""/>
+			<h3 id="eid_vote_title"></h3>
+			<p id="eid_vote_rating"></p>
+			<p id="eid_vote_description"></p>
+			<p>Do you want to watch this movie?</p>
+			<button onclick="voteYes();">👍 Yes</button>
+			<button onclick="voteNo();">👎 No</button>
 		</div>
 
 	</main>
