--- a/prototype-3/public/index.html
+++ b/prototype-3/public/index.html
@@ -9,7 +9,7 @@
 
 	<title>❔2️⃣⌚</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='/icons/16.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='manifest' href='manifest.json'>
 
